--- a/services/bible-client-app/src/components/searchBar.css
+++ b/services/bible-client-app/src/components/searchBar.css
@@ -2,22 +2,25 @@
   margin-top: 105px;
   display: flex;
 }
+.search {
+  margin-top: -5%;
+}
 
 .search input {
   background-color: white;
   border: 0;
-  border-radius: 2px;
-  border-top-right-radius: 0px;
-  border-bottom-right-radius: 0px;
+  border-top-left-radius: 10px;
   font-size: 18px;
   padding: 15px;
   height: 30px;
-  width: 300px;
+  width: 600px;
 }
 
 .searchIcon {
   height: 60px;
   width: 50px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
   background-color: white;
   display: grid;
   place-items: center;
@@ -31,10 +34,9 @@ input:focus {
 }
 
 .dataResult {
-  margin-top: 5px;
-  width: 300px;
-  height: 200px;
-  background-color: white;
+  width: 600px;
+  height: 350px;
+  background-color:  rgb(244, 244, 247);
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   overflow: hidden;
   overflow-y: auto;
@@ -44,23 +46,69 @@ input:focus {
   display: none;
 }
 
-.dataResult .dataItem {
+.dataItem::-webkit-scrollbar {
+  display: none;
+}
+
+.dataItemsContainer {
+  margin-right: 20px;
+  padding-right: 30px;
+  background-color: white;
+}
+
+.dataItemsContainer .dataItem {
   width: 100%;
   height: 50px;
   display: flex;
+  padding: 10px;
+  overflow: hidden;
+  overflow-y: auto;
+}
+
+.dataResult .dataLegend {
+  display: flex;
+  background-color: rgb(244, 244, 247);
+  height: 10%;
   align-items: center;
-  color: black;
+  font-size: 12px;
+}
+.dataLegend .bookLegend {
+  margin: 5px;
+}
+
+.dataLegend .chapterLegend {
+  margin: 5px;
+}
+
+.dataLegend .verseLegend {
+  margin: 5px;
+}
+
+.dataLegend .textLegend {
+  margin: auto;
+}
+
+.dataItemContent {
+  display:flex;
+  gap: 16px;
 }
 
 .dataItem p {
   margin-left: 10px;
-}
-a {
-  text-decoration: none;
+  
 }
 
-a:hover {
+.dataItem {
+  text-decoration: none;
+  color: black;
+}
+
+.dataItem:hover {
   background-color: lightgrey;
+}
+
+.dataItem:active {
+  color: black;
 }
 
 #clearBtn {
